# mini-alphaproof

./: .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  TODOs.md  main.py  pseudocode.py  pyproject.toml  requirements.txt  test_lean_environment.py  test_network.py
.claude/: settings.local.json
alphaproof/: actors.py  autoformalization.py  config.py  environment.py  game.py  goedel_prover.py  helper.py  interactive_env.py  matchmaker.py  network.py  replay_buffer.py  train.py
alphaproof/core/: actors.py  config.py  environment.py  game.py  helper.py  network.py  paths.py  timing.py
alphaproof/formalize/: autoformalization.py  data_cleaning.py  filter_problems.py  goedel_prover.py  qwen3.py
alphaproof/formalize/data_cleaning/: cleaning_run.py  data_cleaning.py  filter_problems.py  metrics.py  model.py  model_calls.py  parallel.py  paths.py  pipeline.py  prompts.py  records.py  (+1 more)
alphaproof/inference/: infer.py  interactive_env.py
alphaproof/training/: matchmaker.py  replay_buffer.py  run_logger.py  sft.py  shared_storage.py  train.py
configs/: train_config.yaml
documents/: AlphaProof_paper.md  design_choices.md
examples/: lean_environment_demo.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
lean_project/: LeanProject.lean  lake-manifest.json  lakefile.toml
notebooks/: autoformalization_model_test.ipynb
scripts/: analyze_dataset.ipynb  debug_environment.py  download_dataset.ipynb  download_model.py  evaluate.py  extract_nemotron_lean_proofs.ipynb  extract_state_action_pairs.py  interact.py  interact_model.py  lean_test.py  numina_math_lean.py  parallelism_benchmark.py  parallelism_benchmark_a100_80gb.sh  parallelism_benchmark_run.py  summarize_rl_timings.py  test_data_cleaning_pipeline.py  train.py
scripts/batch/: data_cleaning_qwen27b_a100_80gb.sh  extract_state_action_pairs_cpu.sh  parallelism_benchmark_a100_80gb.sh  rl_codet5p_220m_v100_32gb.sh  sft_codet5p_220m_v100_32gb.sh
src/: ap_types.py  autoformalization.py  build_network.py  environment.py  mcts.py  network.py  training.py  variant_generation.py
src/environment/: README.md  __init__.py  environment.py  exceptions.py  lean_interface.py  state.py  utils.py
tests/: README.md  manual_test.py  test_cleaning_parallelism.py  test_environment.py  test_extract_state_action_pairs.py  test_inference.py  test_interactive_env.py  test_parallelism_benchmark.py  test_rl_training.py
(+2 files in other folders)
