[project]
name = "alphaproof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.43.0",
    "datasets>=4.0.0",
    "leantree",
    "lm-format-enforcer>=0.11.0",
    "matplotlib>=3.10.0",
    "pandas>=3.0.0",
    "torch>=2.12.1",
    "transformers",
]

[project.optional-dependencies]
fast-kernels = [
    "flash-linear-attention[cuda,conv1d]>=0.5.1; sys_platform == 'linux'",
]

[tool.uv.sources]
leantree = { path = "vendor/leantree", editable = true }
transformers = { git = "https://github.com/huggingface/transformers.git" }

[tool.uv.extra-build-dependencies]
causal-conv1d = [
    { requirement = "torch", match-runtime = true },
    "packaging",
    "ninja",
    "wheel",
]
