[project]
name = "alphaproof"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.43.0",
    "datasets>=4.0.0",
    "leantree",
    "lm-format-enforcer>=0.11.0",
    "matplotlib>=3.10.0",
    "pandas>=3.0.0",
    "torch==2.12.1",
    "transformers",
    "wandb>=0.28.1",
]

[project.optional-dependencies]
fast-kernels = [
    "flash-linear-attention[cuda,conv1d]>=0.5.1; sys_platform == 'linux'",
]
lean-tracing = [
    "lean-dojo-v2==1.0.9",
]

[tool.uv.sources]
leantree = { path = "vendor/leantree", editable = true }
transformers = { git = "https://github.com/huggingface/transformers.git" }
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.extra-build-dependencies]
causal-conv1d = [
    { requirement = "torch", match-runtime = true },
    "packaging",
    "ninja",
    "wheel",
]
